# goit-pythonweb-hw-10

./: .gitignore  env.example  main.py  pyproject.toml
migrations/versions/: 07f87bc2a201_update_models.py  5a3b6958629b_add_user_to_contacts.py  bfd2d47e5aac_init.py  cba4a4d52be1_add_to_model_user_filed_confirmed.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  upload_file.py  users.py
